# TCN-library

./: LICENSE  README.md  setup.cfg
src/tcn_lib/: TCN.py  __init__.py  stats.py  tcn.py
src/tcn_lib/blocks/: Chomp1d.py  LastElement1d.py  PointwiseLayer.py  TemporalBlock.py  TemporalBottleneck.py  TemporalConvNet.py  TemporalLayer.py  __init__.py
src/tcn_lib/utils/: __init__.py  conditional_apply.py  init_batch_norm.py  init_tcn_conv_weight.py
