[metadata]
name = tcn-library
version = 0.0.1
author = Douwe den Blanken
description = TCN library for PyTorch
long_description = This project builds on top of the TCN in https://github.com/locuslab/TCN and extends it with ResNeXt style blocks and depthwise separable convolutions.
keywords = machine learning, ml, ai, pytorch, python, convolution, tcn, temporal

[options]
python_requires = >=3.8
install_requires = 
    torch

package_dir=
    =src
packages=find:

[options.packages.find]
where=src
